exports[`Sidebar component should be displayed correctly in providers view 1`] = `
<aside
  className="coz-sidebar">
  <nav>
    <ul
      className="coz-nav">
      <li
        className="coz-nav-item">
        <Link
          activeClassName="active"
          className="coz-nav-link col-cat-connected"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/connected">
          Connected accounts
        </Link>
      </li>
      <li
        className="coz-nav-item">
        <Link
          className="coz-nav-link col-cat-categories active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/providers/all">
          Providers
        </Link>
      </li>
      <ul
        className="col-nav-submenu">
        <li>
          <Link
            activeClassName="active"
            className="col-nav-submenu-link"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/providers/all">
            All
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="col-nav-submenu-link"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/providers/isp">
            ISP
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="col-nav-submenu-link"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/providers/telecom">
            Telecom
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="col-nav-submenu-link"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/providers/others">
            Others
          </Link>
        </li>
      </ul>
    </ul>
  </nav>
</aside>
`;

exports[`Sidebar component should be displayed correctly in root view 1`] = `
<aside
  className="coz-sidebar">
  <nav>
    <ul
      className="coz-nav">
      <li
        className="coz-nav-item">
        <Link
          activeClassName="active"
          className="coz-nav-link col-cat-connected"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/connected">
          Connected accounts
        </Link>
      </li>
      <li
        className="coz-nav-item">
        <Link
          className="coz-nav-link col-cat-categories"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/providers/all">
          Providers
        </Link>
      </li>
    </ul>
  </nav>
</aside>
`;
